updates index; updates slides

--- a/bootcamp/index.html
+++ b/bootcamp/index.html
@@ -4,6 +4,7 @@
   <title>CNS Data Bootcamp</title>
 </head>
 <body>
-<p><a href="storytelling.pptx">Download Storytelling Slides</a></p>
+<h1 style="text-align:center;">CNS Data Bootcamp</h1>
+<p style="text-align:center;"><a href="storytelling.pptx">Download Storytelling Slides</p>
 </body>
 </html>
