--- a/bootcamp/index.html
+++ b/bootcamp/index.html
@@ -6,5 +6,7 @@
 <body>
 <h1 style="text-align:center;">CNS Data Bootcamp</h1>
 <p style="text-align:center;"><a href="storytelling.pptx">Download Storytelling Slides</p>
+<p style="text-align:center;"><a href="<p style="text-align:center;"><a href="storytelling.pptx">Download Storytelling Video</p>
+">Download Storytelling Slides</p>
 </body>
 </html>
