fixed index links again

--- a/bootcamp/index.html
+++ b/bootcamp/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1 style="text-align:center;">CNS Data Bootcamp</h1>
 <p style="text-align:center;"><a href="storytelling.pptx">Download Storytelling Slides</a></p>
-<p style="text-align:center;"><a href="storytelling.pptx">Download Storytelling Video</a></p>
+<p style="text-align:center;"><a href="https://drive.google.com/file/d/1driG_wh_75eKjSwTZcjncB2KORmaUq_U/view?usp=sharing">Download Storytelling Video</a></p>
 </p>
 </body>
 </html>
